# Generate_README

./: .gitignore  1-Directory_content.md  2-Project_summary.md  3-README.md  4-README_es.md  README.md  pyproject.toml
src/readme/: crew.py  main.py
src/readme/config/: agents.yaml  tasks.yaml
src/readmeFlow/: crew.py  crew2.py  flow.py  main.py
src/readmeFlow/config/: agents.yaml  agents2.yaml  tasks.yaml  tasks2.yaml
