[project]
name = "readme"
version = "0.1.0"
description = "readme using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.76.9,<1.0.0"
]

[project.scripts]
readme = "readme.main:run"
run_crew = "readme.main:run"
train = "readme.main:train"
replay = "readme.main:replay"
test = "readme.main:test"

[tool.poetry]
name = "readme"
version = "0.1.0"
description = ""
authors = ["Tu Nombre <tu@email.com>"]

[tool.poetry.dependencies]
python = "^3.9"
crewai = "*"
crewai-tools = "*"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
